# ufscar-calendar

./: .gitignore  README.md  pyproject.toml
ufscar_calendar/: extractor.py  main.py  parser.py
