[tool.poetry]
name = "ufscar-calendar"
version = "0.1.0"
description = ""
authors = ["Lorhan Sohaky <contato+gi74@lorhan.me>"]
readme = "README.md"
packages = [{include = "ufscar_calendar"}]

[tool.poetry.dependencies]
python = "^3.7"
icalendar = "^5.0.4"
pdfplumber = "^0.8.0"
pytz = "^2022.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
